# NeuralNetworks

./: CMakeLists.txt  README.md  file.txt  main.c  plot_NN_function.m  test
ActivationFunctions/: Linear.h  RectifiedLinearUnit.h  Sigmoid.h  TangensHyperbolikus.h
BackPropagation/: LModelBackward.h  LinearActivationBackward.h  LinearBackward.h
Caches/: Cache.h  Caches.h
CostFunction/: ComputeCost.h
ForwardPropagation/: LModelForward.h  LinearActivationForward.h  LinearForward.h
Helpers/: Matrix.h  Sum.h  Vector.h
Helpers/MatrixOperations/: CopyMatrix.h  MatrixElementOperation.h  MatrixMatrixMultiplikation.h  MatrixVectorBroadcastAddtion.h  PrintMatrix.h  Transpose.h
Helpers/Operations/: operations.h
Helpers/VectorOperations/: PrintVec.h  VectorElementOperation.h  VectorVectorAddition.h
Input/: ReadInputClassification.h  ReadInputRegression.h
Input/Inputs/: input_classification.txt  input_reg.txt  input_reg3.txt  input_regression
Model/: LLayerModel.h  UpdateParameters.h
Parameters/: InitializeParameters.h  Parameters.h
Predict/: WritePredictionsToFile.h  compute_error.h  predict.h
